--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/promise-function-async": "off",
     "@typescript-eslint/no-confusing-void-expression": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/array-type": "off",
     "max-len": ["error", 120],
     "prettier/prettier": "off"
